added creative mode tab

--- a/src/main/resources/assets/honahula/lang/en_us.json
+++ b/src/main/resources/assets/honahula/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.honahula.sapphire": "Sapphire"
+  "item.honahula.sapphire": "Sapphire",
+  "creativetab.honahula_tab": "Modding tab"
+
 }
